app/parser/antlr4/gen/ValodaParser.java
// Generated from Valoda.g4 by ANTLR 4.4

	package parser.antlr4.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ValodaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__11=1, T__10=2, T__9=3, T__8=4, T__7=5, T__6=6, T__5=7, T__4=8, T__3=9, 
		T__2=10, T__1=11, T__0=12, Digit=13, PreDigit=14, WS=15;
	public static final String[] tokenNames = {
		"<INVALID>", "' '", "'simti'", "'vien'", "'padsmit'", "'viens'", "'simt'", 
		"'nulle'", "'desmit'", "'tūkstoš'", "'tūkstotis'", "'tūkstoši'", "'trīs'", 
		"Digit", "PreDigit", "WS"
	};
	public static final int
		RULE_word = 0, RULE_number = 1, RULE_thousands = 2, RULE_postNumber = 3, 
		RULE_preNumber = 4, RULE_threeDigit = 5, RULE_twoDigit = 6, RULE_oneDigit = 7;
	public static final String[] ruleNames = {
		"word", "number", "thousands", "postNumber", "preNumber", "threeDigit", 
		"twoDigit", "oneDigit"
	};

	@Override
	public String getGrammarFileName() { return "Valoda.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ValodaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class WordContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ValodaParser.EOF, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public WordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_word; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitWord(this);
		}
	}

	public final WordContext word() throws RecognitionException {
		WordContext _localctx = new WordContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_word);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16); number();
			setState(17); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
	 
		public NumberContext() { }
		public void copyFrom(NumberContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NulleContext extends NumberContext {
		public NulleContext(NumberContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterNulle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitNulle(this);
		}
	}
	public static class TriDigitNumContext extends NumberContext {
		public ThreeDigitContext threeDigit() {
			return getRuleContext(ThreeDigitContext.class,0);
		}
		public TriDigitNumContext(NumberContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTriDigitNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTriDigitNum(this);
		}
	}
	public static class OneDigitNumContext extends NumberContext {
		public OneDigitContext oneDigit() {
			return getRuleContext(OneDigitContext.class,0);
		}
		public OneDigitNumContext(NumberContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterOneDigitNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitOneDigitNum(this);
		}
	}
	public static class ThousandNumContext extends NumberContext {
		public ThousandsContext thousands() {
			return getRuleContext(ThousandsContext.class,0);
		}
		public ThousandNumContext(NumberContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterThousandNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitThousandNum(this);
		}
	}
	public static class TwoDigitNumContext extends NumberContext {
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public TwoDigitNumContext(NumberContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTwoDigitNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTwoDigitNum(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_number);
		try {
			setState(24);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new NulleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(19); match(T__5);
				}
				break;
			case 2:
				_localctx = new OneDigitNumContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(20); oneDigit();
				}
				break;
			case 3:
				_localctx = new TwoDigitNumContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(21); twoDigit();
				}
				break;
			case 4:
				_localctx = new TriDigitNumContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(22); threeDigit();
				}
				break;
			case 5:
				_localctx = new ThousandNumContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(23); thousands();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThousandsContext extends ParserRuleContext {
		public ThousandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thousands; }
	 
		public ThousandsContext() { }
		public void copyFrom(ThousandsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TukstosSimtMultiRContext extends ThousandsContext {
		public TerminalNode PreDigit() { return getToken(ValodaParser.PreDigit, 0); }
		public PostNumberContext postNumber() {
			return getRuleContext(PostNumberContext.class,0);
		}
		public TukstosSimtMultiRContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosSimtMultiR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosSimtMultiR(this);
		}
	}
	public static class TukstosiContext extends ThousandsContext {
		public PreNumberContext preNumber() {
			return getRuleContext(PreNumberContext.class,0);
		}
		public TukstosiContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosi(this);
		}
	}
	public static class TukstosSimtRContext extends ThousandsContext {
		public PostNumberContext postNumber() {
			return getRuleContext(PostNumberContext.class,0);
		}
		public TukstosSimtRContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosSimtR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosSimtR(this);
		}
	}
	public static class TukstosContext extends ThousandsContext {
		public TukstosContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstos(this);
		}
	}
	public static class TukstosSimtMultiContext extends ThousandsContext {
		public TerminalNode PreDigit() { return getToken(ValodaParser.PreDigit, 0); }
		public TukstosSimtMultiContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosSimtMulti(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosSimtMulti(this);
		}
	}
	public static class TukstosDesmitMultiRContext extends ThousandsContext {
		public TerminalNode PreDigit() { return getToken(ValodaParser.PreDigit, 0); }
		public PostNumberContext postNumber() {
			return getRuleContext(PostNumberContext.class,0);
		}
		public TukstosDesmitMultiRContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosDesmitMultiR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosDesmitMultiR(this);
		}
	}
	public static class TukstosSimtContext extends ThousandsContext {
		public TukstosSimtContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosSimt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosSimt(this);
		}
	}
	public static class TukstosPadsmitContext extends ThousandsContext {
		public TerminalNode PreDigit() { return getToken(ValodaParser.PreDigit, 0); }
		public TukstosPadsmitContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosPadsmit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosPadsmit(this);
		}
	}
	public static class TukstosPadsmitRContext extends ThousandsContext {
		public TerminalNode PreDigit() { return getToken(ValodaParser.PreDigit, 0); }
		public PostNumberContext postNumber() {
			return getRuleContext(PostNumberContext.class,0);
		}
		public TukstosPadsmitRContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosPadsmitR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosPadsmitR(this);
		}
	}
	public static class TukstosiRContext extends ThousandsContext {
		public PostNumberContext postNumber() {
			return getRuleContext(PostNumberContext.class,0);
		}
		public PreNumberContext preNumber() {
			return getRuleContext(PreNumberContext.class,0);
		}
		public TukstosiRContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosiR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosiR(this);
		}
	}
	public static class TukstosPreContext extends ThousandsContext {
		public TerminalNode PreDigit() { return getToken(ValodaParser.PreDigit, 0); }
		public TukstosPreContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosPre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosPre(this);
		}
	}
	public static class TukstosDesmitContext extends ThousandsContext {
		public TukstosDesmitContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosDesmit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosDesmit(this);
		}
	}
	public static class TukstosDesmitMultiContext extends ThousandsContext {
		public TerminalNode PreDigit() { return getToken(ValodaParser.PreDigit, 0); }
		public TukstosDesmitMultiContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosDesmitMulti(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosDesmitMulti(this);
		}
	}
	public static class TukstosRContext extends ThousandsContext {
		public PostNumberContext postNumber() {
			return getRuleContext(PostNumberContext.class,0);
		}
		public TukstosRContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosR(this);
		}
	}
	public static class TukstotisContext extends ThousandsContext {
		public TukstotisContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstotis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstotis(this);
		}
	}
	public static class TukstosPreRContext extends ThousandsContext {
		public TerminalNode PreDigit() { return getToken(ValodaParser.PreDigit, 0); }
		public PostNumberContext postNumber() {
			return getRuleContext(PostNumberContext.class,0);
		}
		public TukstosPreRContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosPreR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosPreR(this);
		}
	}
	public static class TukstosDesmitRContext extends ThousandsContext {
		public PostNumberContext postNumber() {
			return getRuleContext(PostNumberContext.class,0);
		}
		public TukstosDesmitRContext(ThousandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterTukstosDesmitR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitTukstosDesmitR(this);
		}
	}

	public final ThousandsContext thousands() throws RecognitionException {
		ThousandsContext _localctx = new ThousandsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_thousands);
		int _la;
		try {
			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new TukstosContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(26); match(T__3);
				}
				break;
			case 2:
				_localctx = new TukstotisContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(27); match(T__2);
				}
				break;
			case 3:
				_localctx = new TukstosRContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(28); match(T__3);
				{
				setState(29); match(T__11);
				setState(30); postNumber();
				}
				}
				break;
			case 4:
				_localctx = new TukstosPreContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(31); match(PreDigit);
				setState(32); match(T__3);
				}
				break;
			case 5:
				_localctx = new TukstosPreRContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(33); match(PreDigit);
				setState(34); match(T__3);
				{
				setState(35); match(T__11);
				setState(36); postNumber();
				}
				}
				break;
			case 6:
				_localctx = new TukstosDesmitContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(37); match(T__4);
				setState(38); match(T__3);
				}
				break;
			case 7:
				_localctx = new TukstosPadsmitContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(39);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__0) | (1L << PreDigit))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(40); match(T__8);
				setState(41); match(T__3);
				}
				break;
			case 8:
				_localctx = new TukstosDesmitMultiContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(42);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==PreDigit) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(43); match(T__4);
				setState(44); match(T__3);
				}
				break;
			case 9:
				_localctx = new TukstosSimtContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(45); match(T__6);
				setState(46); match(T__3);
				}
				break;
			case 10:
				_localctx = new TukstosSimtMultiContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(47);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==PreDigit) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(48); match(T__6);
				setState(49); match(T__3);
				}
				break;
			case 11:
				_localctx = new TukstosDesmitRContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(50); match(T__4);
				setState(51); match(T__3);
				{
				setState(52); match(T__11);
				setState(53); postNumber();
				}
				}
				break;
			case 12:
				_localctx = new TukstosPadsmitRContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(54);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__0) | (1L << PreDigit))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(55); match(T__8);
				setState(56); match(T__3);
				{
				setState(57); match(T__11);
				setState(58); postNumber();
				}
				}
				break;
			case 13:
				_localctx = new TukstosDesmitMultiRContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(59);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==PreDigit) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(60); match(T__4);
				setState(61); match(T__3);
				{
				setState(62); match(T__11);
				setState(63); postNumber();
				}
				}
				break;
			case 14:
				_localctx = new TukstosSimtRContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(64); match(T__6);
				setState(65); match(T__3);
				{
				setState(66); match(T__11);
				setState(67); postNumber();
				}
				}
				break;
			case 15:
				_localctx = new TukstosSimtMultiRContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(68);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==PreDigit) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(69); match(T__6);
				setState(70); match(T__3);
				{
				setState(71); match(T__11);
				setState(72); postNumber();
				}
				}
				break;
			case 16:
				_localctx = new TukstosiContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(73); preNumber();
				setState(74); match(T__11);
				setState(75); match(T__1);
				}
				break;
			case 17:
				_localctx = new TukstosiRContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(77); preNumber();
				setState(78); match(T__11);
				setState(79); match(T__1);
				{
				setState(80); match(T__11);
				setState(81); postNumber();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostNumberContext extends ParserRuleContext {
		public ThreeDigitContext threeDigit() {
			return getRuleContext(ThreeDigitContext.class,0);
		}
		public TerminalNode Digit() { return getToken(ValodaParser.Digit, 0); }
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public PostNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postNumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterPostNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitPostNumber(this);
		}
	}

	public final PostNumberContext postNumber() throws RecognitionException {
		PostNumberContext _localctx = new PostNumberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_postNumber);
		try {
			setState(90);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85); threeDigit();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86); twoDigit();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87); match(Digit);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88); match(T__0);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(89); match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreNumberContext extends ParserRuleContext {
		public ThreeDigitContext threeDigit() {
			return getRuleContext(ThreeDigitContext.class,0);
		}
		public TerminalNode Digit() { return getToken(ValodaParser.Digit, 0); }
		public TwoDigitContext twoDigit() {
			return getRuleContext(TwoDigitContext.class,0);
		}
		public PreNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preNumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).enterPreNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValodaListener ) ((ValodaListener)listener).exitPreNumber(this);
		}
	}

	public final PreNumberContext preNumber() throws RecognitionException {
		PreNumberContext _localctx = new PreNumberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_preNumber);
		try {
			setState(96);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92); threeDigit();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93); twoDigit();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94); match(Digit);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95); match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
